--- a/invoice_management/templates/create_invoice_new_customer.html
+++ b/invoice_management/templates/create_invoice_new_customer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Invoice for New Customer</title>
-    <!-- Add your meta tags and title here -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <!-- Include your CSS file -->
 </head>
 <body>
