--- a/invoice_management/templates/products.html
+++ b/invoice_management/templates/products.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
-    <div class="container">
-        <h1>Products</h1>
-        <nav>
-            <ul>
-                <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
-                <li><a href="{{ url_for('invoices') }}">Invoices</a></li>
-                <li><a href="{{ url_for('products') }}">Products</a></li>
-                <li><a href="{{ url_for('customers') }}">Customers</a></li>
-                <li><a href="{{ url_for('logout') }}">Logout</a></li>
-            </ul>
-        </nav>
-        <div>
-            <a href="{{ url_for('create_product') }}" class="button">Create Product</a>
-        <a href="{{ url_for('manage_products') }}" class="button">Manage Products</a>
+    <div id = "header">
+        <div class="container">
+            <h1>Products</h1>
+            <nav>
+                <ul>
+                    <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
+                    <li><a href="{{ url_for('invoices') }}">Invoices</a></li>
+                    <li><a href="{{ url_for('products') }}">Products</a></li>
+                    <li><a href="{{ url_for('customers') }}">Customers</a></li>
+                    <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                </ul>
+            </nav>
         </div>
+    </div>
+    <div class ="container">
+        <a href="{{ url_for('create_product') }}" class="button">Create Product</a>
+        <a href="{{ url_for('manage_products') }}" class="button">Manage Products</a>
     </div>
 </body>
 </html>
