--- a/invoice_management/templates/login.html
+++ b/invoice_management/templates/login.html
@@ -6,21 +6,19 @@
     <title>Login</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
-<body>
-    <div id = "login">
-        <div class="container">
-            <h1>Login</h1>
-            {% if error %}
-                <p class="error">{{ error }}</p>
-            {% endif %}
-            <form method="post">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required><br>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required><br>
-                <button type="submit">Login</button>
-            </form>
-        </div>
+<body class="login-body">
+    <div class="login-div">
+        <h1 class="login-h1">Login</h1>
+        {% if error %}
+            <p class="error">{{ error }}</p>
+        {% endif %}
+        <form method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required><br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required><br>
+            <button type="submit">Login</button>
+        </form>
     </div>
 </body>
 </html>
